--- a/trvl-frontend/travellite/public/index.html
+++ b/trvl-frontend/travellite/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="./travel-icon.png" />
+  <link rel="icon" href="./Trvl.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Web site created using create-react-app" />
   <title>Travel-lite!</title>
